MB-49819: Dump JSON as ASCII & escape any UNICODE chars

Ensure when dumping JSON data to a string that we render it as ASCII
with any UNICODE chars escaped.

Change-Id: I35b3a5caa86541fe9e4c4d9e516f67cd50d6dc49
Reviewed-on: https://review.couchbase.org/c/couchstore/+/167919
Tested-by: Richard de Mellow <richard.demellow@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>